[package]
name = "diffie-hellman"
version = "0.1.0"
authors = ["Kazuaki Ishiguro <gurokazu@gmail.com>"]
edition = "2018"
description = "Pure Rust diffie-hellman implementation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kazuakiishiguro/diffie-hellman"
keywords = ["diffie-hellman", "crypto"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
